devel.examples/Bad-Example/lib/Bad/Example/Class.pm
package Bad::Example::Class;
use Bad::Example::Mite;
with 'Bad::Example::Role';
#sub missing { 1 }
1;